<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="#FFF9FB"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/sp_shapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="0"
        android:entries="@array/shapes"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_rectangle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/areas_rectangle_height_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="20sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_rectangle_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/areas_rectangle_width_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/areas_circle_radiuss_hint"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_triangle_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/areas_triangle_base_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_triangle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/areas_triangle_height_hint"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_areas_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:backgroundTint="@null"
        android:background="@drawable/rounder_bg_button"
        android:padding="10dp"
        android:text="@string/btn_calculate_shapes"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/areas_txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:gravity="center"
        android:ellipsize="none"
        android:padding="10dp"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:text="10.5"
        android:textColor="@color/white"
        android:textSize="50sp" />
</LinearLayout>